# polymarket-scraper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 001_create_markets.sql
src/: api.rs  db.rs  main.rs  metrics.rs  models.rs  scraper.rs
